--- a/MLNewsArticles.ipynb
+++ b/MLNewsArticles.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "2a4c3baa-9437-4182-ab49-19d8835a2fb3",
    "metadata": {},
    "outputs": [
@@ -612,9 +612,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5204a314-faa7-4b70-8afa-1bdf09a64809",
+   "metadata": {},
+   "source": [
+    "_________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a7a2072-15b6-4ff7-b0d1-86fc84f9e6eb",
+   "metadata": {},
+   "source": [
+    "## Conclusion: News Article Category Classifier\n",
+    "\n",
+    "### 1. Objective & Dataset:\n",
+    "- **Goal**: Build a machine learning classifier to categorize news articles into their respective categories.\n",
+    "- **Dataset**: 200,000 news articles with attributes like headline, short description, authors, date, and category.\n",
+    "\n",
+    "### 2. Data Preprocessing:\n",
+    "- Performed extensive preprocessing on the article text:\n",
+    "  * Removal of unwanted characters.\n",
+    "  * Conversion to lowercase.\n",
+    "  * Lemmatization to reduce words to their base form.\n",
+    "  * Removal of stopwords.\n",
+    "- Utilized the TF-IDF vectorizer for numerical transformation of the cleaned text data.\n",
+    "\n",
+    "### 3. Model Selection & Training:\n",
+    "- Chose the **Random Forest Classifier** due to its ability to handle large datasets and robustness against overfitting.\n",
+    "- Initial model yielded an accuracy of ~51%.\n",
+    "- Enhanced performance and efficiency via parameter optimization and parallel processing (`n_jobs=-1`).\n",
+    "\n",
+    "### 4. Hyperparameter Tuning:\n",
+    "- Conducted Grid Search with cross-validation for hyperparameter optimization.\n",
+    "- Best Parameters:\n",
+    "  * `max_depth`: None\n",
+    "  * `max_features`: auto\n",
+    "  * `min_samples_leaf`: 1\n",
+    "  * `min_samples_split`: 5\n",
+    "  * `n_estimators`: 200\n",
+    "\n",
+    "### 5. Final Model Performance:\n",
+    "- Refined Random Forest Classifier with the best parameters achieved ~53.7% accuracy on the test dataset.\n",
+    "- There's room for further model optimization and exploration of other algorithms.\n",
+    "\n",
+    "### 6. Future Directions:\n",
+    "- Explore other machine learning algorithms like Neural Networks or Gradient Boosted Trees.\n",
+    "- Incorporate additional features (e.g., article author, publication date).\n",
+    "- Consider advanced preprocessing techniques, such as n-gram based TF-IDF vectorization.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The project highlighted the potential of machine learning in news categorization, with skills and methodologies that are transferable across various domains.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e66ccff-ab42-45de-9a6e-0142e1af8066",
+   "id": "c8ffa77b-f673-4da7-9c10-9af34d10aeb3",
    "metadata": {},
    "outputs": [],
    "source": []
